# api-rest-red-social/routes/user.js
@@ -26,6 +26,7 @@ router.put("/update", check.auth, UserContoller.update);
 router.post("/upload", [check.auth, uploads.single("file0")], UserContoller.upload);
 router.get("/avatar/:file", UserContoller.avatar); // cambio
 router.get("/counters/:id", check.auth, UserContoller.counters);
+router.get('/list/:page?', auth, userController.getUsers);
 
 // Exportar router
 module.exports = router;
